[tool.poetry]
name = "centerface"
version = "0.1.0"
description = ""
authors = ["babaamata <sakakibaraki@fuji.waseda.com>"]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
numpy = "^1.21.4"
scipy = "^1.7.3"
opencv-python-headless = "^4.5.4"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
